# concord-haskell

./: README.md
Concord/: Concord.cabal  stack.yaml
Concord/src/: BoltManagerService.hs  BoltManagerService_Client.hs  BoltManagerService_Iface.hs  BoltMetricsService.hs  BoltMetricsService_Client.hs  BoltMetricsService_Iface.hs  BoltProxyService.hs  BoltProxyService_Client.hs  BoltProxyService_Iface.hs  BoltSchedulerService.hs  BoltSchedulerService_Client.hs  BoltSchedulerService_Iface.hs  Bolt_Consts.hs  Bolt_Types.hs  ComputationService.hs  ComputationService_Client.hs  ComputationService_Iface.hs  Concord.hs  MutableEphemeralStateService.hs  MutableEphemeralStateService_Client.hs  MutableEphemeralStateService_Iface.hs
