name:                Concord
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/Concord#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Blafford
maintainer:          rob@concord.io
copyright:           2010 Concord Systems, Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable Concord
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       hashable,
                       vector,
                       text,
                       QuickCheck,
                       containers,
                       unordered-containers,
                       thrift,
                       transformers                       

